start of sorting bucket

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -60,7 +60,7 @@ SRCS := $(addprefix $(SRCS_D), $(SRCS))
 
 # compiler settings
 CC = cc
-CFLAGS = -Wall -Werror -Wextra -I$(INCLUDES_D)
+CFLAGS = -Wall -Werror -Wextra -I$(INCLUDES_D) -g3
 MAKEFLAGS += --no-print-directory
 
 # commands
