--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -18,3 +18,6 @@ jobs:
       run: make debug
     - name: make benchmark
       run: make benchmark
+    - uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_message: Changed files
