--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: mjuncker <mjuncker@student.42lyon.fr>      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/24 18:00:56 by mjuncker          #+#    #+#              #
-#    Updated: 2025/01/07 12:14:23 by mjuncker         ###   ########.fr        #
+#    Updated: 2025/01/08 08:44:10 by mjuncker         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -66,6 +66,7 @@ SRCS =  ft_isalpha.c 		\
 		ft_lstprint.c		\
 		ft_get_next_line.c	\
 		ft_printf.c			\
+		ft_numbers.c		\
 
 OBJ = $(SRCS:.c=.o)
 
