--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -17,4 +17,4 @@ jobs:
     - name: make debug
       run: make debug
     - name: make benchmark
-      run: make benchmark
+      run: bash benchmark.sh
